--- a/src/app/components/dashboards/dashboards.component.html
+++ b/src/app/components/dashboards/dashboards.component.html
@@ -1,1 +1,4 @@
-<p>dashboards works!</p>
+<h1>Dashboards:</h1>
+<div *ngFor="let dashboard of dashboards | async">
+  <span>{{ dashboard | json }}</span>
+</div>
