--- a/src/app/components/posts/posts.component.html
+++ b/src/app/components/posts/posts.component.html
@@ -1,5 +1,18 @@
 <h1>Posts:</h1>
 
-<div *ngFor="let post of posts | async">
-  <span>{{ post | json }}</span>
-</div>
+<mat-card class="post" *ngFor="let post of posts | async">
+  <mat-card-content>
+    <p>
+      <strong>Name: </strong>
+      {{ post.from_name }}
+    </p>
+    <p>
+      <strong>Message: </strong>
+      {{ post.message }}
+    </p>
+    <p>
+      <strong>Time: </strong>
+      {{ post.created_time }}
+    </p>
+  </mat-card-content>
+</mat-card>
