--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,6 @@
-<router-outlet></router-outlet>
+<div>header</div>
+<div class="app-component">
+  <div class="container">
+    <router-outlet></router-outlet>
+  </div>
+</div>
