--- a/src/app/components/posts/posts.component.html
+++ b/src/app/components/posts/posts.component.html
@@ -1,18 +1,27 @@
 <h1>Posts:</h1>
-
-<mat-card class="post" *ngFor="let post of posts | async">
-  <mat-card-content>
-    <p>
-      <strong>Name: </strong>
-      {{ post.from_name }}
-    </p>
-    <p>
-      <strong>Message: </strong>
-      {{ post.message }}
-    </p>
-    <p>
-      <strong>Time: </strong>
-      {{ post.created_time }}
-    </p>
-  </mat-card-content>
-</mat-card>
+<mat-paginator
+  [length]="100"
+  [pageSize]="10"
+  [pageSizeOptions]="[5, 10, 25, 100]"
+  aria-label="Select page"
+  (page)="onChangePage($event)"
+>
+</mat-paginator>
+<div>
+  <mat-card class="post" *ngFor="let post of posts | async">
+    <mat-card-content>
+      <p>
+        <strong>Name: </strong>
+        {{ post.from_name }}
+      </p>
+      <p>
+        <strong>Message: </strong>
+        {{ post.message }}
+      </p>
+      <p>
+        <strong>Time: </strong>
+        {{ post.created_time }}
+      </p>
+    </mat-card-content>
+  </mat-card>
+</div>
