Update pagination logic.

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,12 +2,8 @@
   flex: 1 1 auto;
 }
 
-.main-content {
-  background-color: whitesmoke;
-}
-
 .container {
   max-width: 1100px;
   margin: 0 auto;
-  padding: 0 1rem;
+  padding: 0 1rem 1rem;
 }
