--- a/src/app/components/posts/posts.component.html
+++ b/src/app/components/posts/posts.component.html
@@ -1,14 +1,15 @@
 <h1>Posts:</h1>
 <mat-paginator
-  [length]="100"
-  [pageSize]="10"
-  [pageSizeOptions]="[5, 10, 25, 100]"
-  aria-label="Select page"
+  class="paginator"
+  [length]="totalPosts"
+  [pageSize]="pageSize"
+  [pageSizeOptions]="pageSizeOptions"
   (page)="onChangePage($event)"
+  showFirstLastButtons
 >
 </mat-paginator>
 <div>
-  <mat-card class="post" *ngFor="let post of posts | async">
+  <mat-card class="post" *ngFor="let post of pagedPosts$ | async">
     <mat-card-content>
       <p>
         <strong>Name: </strong>
