--- a/src/app/components/monthly-posts-chart/monthly-posts-chart.component.html
+++ b/src/app/components/monthly-posts-chart/monthly-posts-chart.component.html
@@ -1,3 +1,4 @@
+<div class="canvas-wrapper">
   <canvas
     baseChart
     [data]="barChartData"
@@ -7,3 +8,4 @@
     [type]="'bar'"
   >
   </canvas>
+</div>
