--- a/src/app/components/dashboards/dashboards.component.scss
+++ b/src/app/components/dashboards/dashboards.component.scss
@@ -5,3 +5,12 @@
     padding: 1rem;
   }
 }
+
+.spinner {
+  margin: 25% auto;
+}
+
+.error-message-card {
+  margin: 0 auto;
+  max-width: 450px;
+}
