--- a/src/app/components/posts/posts.component.html
+++ b/src/app/components/posts/posts.component.html
@@ -1,28 +1,44 @@
-<h1>Posts:</h1>
-<mat-paginator
-  class="paginator"
-  [length]="totalPosts"
-  [pageSize]="pageSize"
-  [pageSizeOptions]="pageSizeOptions"
-  (page)="onChangePage($event)"
-  showFirstLastButtons
->
-</mat-paginator>
-<div>
-  <mat-card class="post" *ngFor="let post of pagedPosts$ | async">
-    <mat-card-content>
-      <p>
-        <strong>Name: </strong>
-        {{ post.from_name }}
-      </p>
-      <p>
-        <strong>Message: </strong>
-        {{ post.message }}
-      </p>
-      <p>
-        <strong>Time: </strong>
-        {{ post.created_time | date : "dd.MM.yyyy HH:mm" }}
-      </p>
-    </mat-card-content>
-  </mat-card>
-</div>
+<ng-container *ngIf="(posts$ | async)?.length as postsLength; else spinnerOrError">
+  <h1>Posts:</h1>
+  <mat-paginator
+    class="paginator"
+    [length]="postsLength"
+    [pageSize]="pageSize"
+    [pageSizeOptions]="pageSizeOptions"
+    (page)="onChangePage($event)"
+    showFirstLastButtons
+  >
+  </mat-paginator>
+  <div>
+    <mat-card class="post" *ngFor="let post of pagedPosts$ | async">
+      <mat-card-content>
+        <p>
+          <strong>Name: </strong>
+          {{ post.from_name }}
+        </p>
+        <p>
+          <strong>Message: </strong>
+          {{ post.message }}
+        </p>
+        <p>
+          <strong>Time: </strong>
+          {{ post.created_time | date : "dd.MM.yyyy HH:mm" }}
+        </p>
+      </mat-card-content>
+    </mat-card>
+  </div>
+</ng-container>
+
+<ng-template #spinnerOrError>
+  <ng-container *ngIf="errorMessage; else spinner">
+    <mat-card class="error-message-card">
+      <mat-card-content>{{ errorMessage }}</mat-card-content>
+      <mat-card-actions align="end">
+        <button mat-button routerLink="/posts">Retry</button>
+      </mat-card-actions>
+    </mat-card>
+  </ng-container>
+  <ng-template #spinner>
+    <mat-spinner class="spinner"></mat-spinner>
+  </ng-template>
+</ng-template>
